2. Fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -48,7 +48,7 @@
     --line-height-big: 1.8;
   
     /** SECTION **/
-    --section-padding: 5rem 0;
+    --section-padding: 5rem 1.5rem;
     --section-header-padding: 0 0 3rem;
     --section-header-align: center;
     --section-title-font-size: var(--font-size-xx-large);
@@ -61,7 +61,7 @@
     --section-tagline-font-family: var(--font-family-headings);
     --section-tagline-font-weight: var(--font-weight-bold);
     --section-tagline-margin: 0;
-    --section-body-padding: 2rem 0 4rem;
+    --section-body-padding: 2rem 0 0;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
   
@@ -177,6 +177,7 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
   
   /*** 2. LAYOUT ***/
   
@@ -213,7 +214,7 @@
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
   }
-  
+
   @media screen and (max-width: 767px) {
     ul.row, .row {
       flex-direction: column;
@@ -223,11 +224,11 @@
     [class^='col-'] {
       margin: 0 0 3rem 0;
     }
-
     .col-1-3, .col-1-2 {
       width: 100%;
     }
-}
+  }
+  
   /* Navbar
       ============================= */
   
@@ -276,7 +277,11 @@
     background-color: var(--color-primary);
     width: 100%;
   }
-  
+  @media screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
+  }
   /* Header
       ============================= */
   
@@ -292,11 +297,7 @@
     justify-content: space-between;
     align-items: center;
   }
-  @media screen and (max-width: 767px){
-    .navbar-menu {
-        display: none;
-    }
-}
+  
   /* Footer
       ============================= */
   
@@ -417,6 +418,13 @@
   
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media screen and (max-width: 767px) {
+    .section-latest-news .row{
+      flex-direction: column;
+    }
+    
   }
   
   /* Section SERVICES
